# chinese-chess

./: .gitignore  README.md  pyproject.toml  requirements.txt  启动象棋.bat  启动象棋.command
.github/workflows/: build.yml
packaging/: chinese_chess.spec  run_game.py
src/chinese_chess/: __init__.py  __main__.py
src/chinese_chess/engine/: __init__.py  ai.py  board.py  pieces.py
src/chinese_chess/game/: __init__.py  controller.py  notation.py  puzzles.py  rank.py  record.py  storage.py
src/chinese_chess/net/: __init__.py  lan.py
src/chinese_chess/ui/: __init__.py  app.py  board_view.py  sound.py  theme.py  widgets.py
src/chinese_chess/ui/scenes/: __init__.py  game.py  lan.py  menu.py  records.py  replay.py
tests/: test_engine.py
